# onebot_Astrologian_FFXIV

./: .env.dev  .gitignore  LICENSE  README.md  bot.py  config.py  install.bat  pyproject.toml  requirements.txt
nonebot_plugin_astrologian/plugins/Astrologian/: __init__.py  config.py  data_source.py
nonebot_plugin_astrologian/plugins/Astrologian/data/: events.json
onebot_astrologian/plugins/Astrologian/: __init__.py
plugins/Astrologian/: luck.py  utils.py
plugins/Astrologian/data/: events.json
